sup and sub scripts

--- a/html/index.html
+++ b/html/index.html
@@ -7,5 +7,16 @@
 </head>
 <body>
     <h1>Lets Start Developing</h1>
+    <p>
+        <i>Italized</i><br>
+        <em>Emb</em><br>
+        <u>Underlined</u><br>
+    </p>
+    <p>
+        <h4>Super script and sub script</h4>
+        H<sub>2</sub>O : 10<sup>2</sup> = 100
+    </p>
+</p>
+    
 </body>
 </html>
