--- a/day-1/index.html
+++ b/day-1/index.html
@@ -72,6 +72,8 @@ int main(){
   
     <h1 id="cpt3">Chapter 3:-</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit excepturi aperiam voluptas beatae quibusdam iusto ea ex esse quo quaerat, odio autem quasi fugit, rem ipsum natus dolorum, adipisci eveniet velit. Provident sed ratione nulla nostrum porro consequatur, id cupiditate consequuntur, vero unde earum, quisquam sint? Quos ab incidunt illo.</p>
+    <hr>
+    <h1>Web site redirecting:-</h1>
     <h3><a href="#">Top</a></h3>
 </body>
 </html>
